@@ -7,6 +7,7 @@
 
 	* HACKT-00-01-04-main-00-81-20:
 	  minor C++ conformance header fix: sim/chpsim/TraceIterators.h
+		guile/hackt-documentation.h
 
 
 2007-04-20	David Fang		<fangism@users.sourceforge.net>
